--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Kidist935.github.io/Evangadi-Forum-Frontend",
+  "homepage": "https://Tsehay21.github.io/EvangadiForumFrontEnd",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
